# timer_scf_duplicates

./: .coveragerc  .flake8  .gitignore  .pylintrc  README.md  function_app.py  pyproject.toml  requirements.txt
.github/workflows/: azure-functions-app-python.yml  azure-functions-app-stage-python.yml  code-quality.yml  tests.yml
src/: __init__.py  handlers.py  processors.py  storage.py
tests/: conftest.py  test_handlers.py  test_processors.py  test_storage.py
