[tool.poetry]
name = "timer-scf-duplicates"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
setuptools = "^78.1.0"
wheel = "^0.45.1"
pip = "^25.0.1"
requests = "^2.32.3"
azure-functions = "^1.21.3"
azure-storage-blob = "^12.25.1"
azure-storage-queue = "^12.12.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"
mypy = "^1.15.0"
pylint = "^3.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]